@startuml mapping-05-resources-notifications
title Relational Mapping — Resources & Notifications

skinparam linetype ortho
hide circle
skinparam class {
  BackgroundColor White
  BorderColor #2563eb
}

entity "Users" as users <<ref · Identity ctx>> #EEEEEE {
  *Id : uniqueidentifier <<PK>>
}

entity "Resources" as res {
  *Id : uniqueidentifier <<PK>>
  --
  AuthorUserId : uniqueidentifier <<FK>>
  Slug : nvarchar <<UK>>
  Type : int
  Status : int
}

entity "ResourceChapters" as rc {
  *Id : uniqueidentifier <<PK>>
  --
  ResourceId : uniqueidentifier <<FK>>
  TitleEn : nvarchar
  SortOrder : int
}

entity "ResourceBookmarks" as rb {
  *Id : uniqueidentifier <<PK>>
  --
  ResourceId : uniqueidentifier <<FK>>
  UserId : uniqueidentifier <<FK>>
  BookmarkedAt : datetimeoffset
}

entity "ResourceProgress" as rp {
  *Id : uniqueidentifier <<PK>>
  --
  ResourceId : uniqueidentifier <<FK>>
  UserId : uniqueidentifier <<FK>>
  LastAccessedAt : datetimeoffset
}

entity "ResourceProgressChildren" as rpc {
  *Id : uniqueidentifier <<PK>>
  --
  ResourceProgressId : uniqueidentifier <<FK>>
  ResourceChildId : uniqueidentifier <<FK>>
  IsCompleted : bit
}

entity "Notifications" as nt {
  *Id : uniqueidentifier <<PK>>
  --
  RecipientUserId : uniqueidentifier <<FK>>
  Type : int
  Channel : int
  IsRead : bit
}

entity "NotificationPreferences" as np {
  *Id : uniqueidentifier <<PK>>
  --
  UserId : uniqueidentifier <<FK>>
  Type : int
  Channel : int
  IsEnabled : bit
}

' ----- intra-context FKs -----
res ||--o{ rc
res ||--o{ rb
res ||--o{ rp
rp  ||--o{ rpc
rc  ||--o{ rpc

' ----- cross-context FKs -----
users ||--o{ res : AuthorUserId
users ||--o{ rb  : UserId
users ||--o{ rp  : UserId
users ||--o{ nt  : RecipientUserId
users ||--o{ np  : UserId

note bottom of rb
  FIX (review): ResourceBookmarks and ResourceProgresses each carry a
  UserId FK — the owning user, which the SRS EERD left implicit.
end note
@enduml
